Summary and context

--- a/Documentation/report/template/prelude.tex
+++ b/Documentation/report/template/prelude.tex
@@ -9,7 +9,7 @@
 \hline 
 Items & Format & Recipient(s) and Date \\ 
 \hline 
-Beliverable 1, 2, 3 & Report & SSO (DD/MM/YY) \\ 
+Deliverable 1, 2, 3 & Report & SSO (DD/MM/YY) \\ 
 \hline 
 Participant consent forms & Signed forms in envelop & SSO (DD/MM/YY) \\ 
 \hline 
