Report: Problem overview, cloud gaming

--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -1,21 +1,75 @@
-@article{parikh1980adaptive,
-  title={An adaptive lattice algorithm for recursive filters},
-  author={Parikh, D and Ahmed, N and Stearns, SDSD},
-  journal={Acoustics, Speech and Signal Processing, IEEE Transactions on},
-  volume={28},
-  number={1},
-  pages={110--111},
-  year={1980},
+@inproceedings{mariano2015cloud,
+  title={Is cloud gaming the future of the gaming industry?},
+  author={Mariano, Bryce and Koo, Simon GM},
+  booktitle={Ubiquitous and Future Networks (ICUFN), 2015 Seventh International Conference on},
+  pages={969--972},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{shea2013cloud,
+  title={Cloud gaming: architecture and performance},
+  author={Shea, Ryan and Liu, Jiangchuan and Ngai, Edith and Cui, Yong},
+  journal={Network, IEEE},
+  volume={27},
+  number={4},
+  pages={16--21},
+  year={2013},
   publisher={IEEE}
 }
 
-@article{parikh1980adaptive,
-  title={An adaptive lattice algorithm for recursive filters},
-  author={Parikh, D and Ahmed, N and Stearns, SDSD},
-  journal={Acoustics, Speech and Signal Processing, IEEE Transactions on},
-  volume={28},
-  number={1},
-  pages={110--111},
-  year={1980},
+@article{chuah2014cloud,
+  title={Cloud gaming: a green solution to massive multiplayer online games},
+  author={Chuah, Seong-Ping and Yuen, Chau and Cheung, Ngai-Man},
+  journal={Wireless Communications, IEEE},
+  volume={21},
+  number={4},
+  pages={78--87},
+  year={2014},
   publisher={IEEE}
+}
+
+@inproceedings{huang2013gaminganywhere,
+  title={GamingAnywhere: an open cloud gaming system},
+  author={Huang, Chun-Ying and Hsu, Cheng-Hsin and Chang, Yu-Chun and Chen, Kuan-Ta},
+  booktitle={Proceedings of the 4th ACM multimedia systems conference},
+  pages={36--47},
+  year={2013},
+  organization={ACM}
+}
+
+@article{lee2015outatime,
+  title={Outatime: Using speculation to enable low-latency continuous interaction for mobile cloud gaming},
+  author={Lee, Kyungmin and Chu, David and Cuervo, Eduardo and Kopf, Johannes and Wolman, Alec and Degtyarev, Yury and Grizan, Sergey and Flinn, Jason},
+  journal={GetMobile: Mobile Computing and Communications},
+  volume={19},
+  number={3},
+  pages={14--17},
+  year={2015},
+  publisher={ACM}
+}
+
+@article{shirmohammadi2015delay,
+  title={Delay Reduction in Cloud Gaming},
+  author={Shirmohammadi, Shervin},
+  journal={IEEE COMSOC Multimedia Communications Technical Committee E-Letter},
+  volume={10},
+  number={6},
+  year={2015}
+}
+
+@inproceedings{jarschel2011evaluation,
+  title={An evaluation of QoE in cloud gaming based on subjective tests},
+  author={Jarschel, Michael and Schlosser, Daniel and Scheuring, Sven and Ho{\ss}feld, Tobias},
+  booktitle={Innovative Mobile and Internet Services in Ubiquitous Computing (IMIS), 2011 Fifth International Conference on},
+  pages={330--335},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{deutsch1994eight,
+  title={The eight fallacies of distributed computing},
+  author={Deutsch, Peter},
+  journal={URL: http://today. java. net/jag/Fallacies. html},
+  year={1994}
 }
