--- a/Documentation/report/template/summary.tex
+++ b/Documentation/report/template/summary.tex
@@ -1,3 +1,3 @@
-Cloud computing attempts to enable access to high-end graphics intensive games to a wider audience by using powerful data centers. The process of delivering cloud gaming includes processing the user input for the game engine then encoding this as video and streamed to the end user. Due to another added layer of complexity, other problems arise and the aim of this project is to tackle networking issues in the cloud to reduce the latency experienced by the user.\
+Cloud computing attempts to enable access to high-end graphics intensive games to a wider audience by using powerful data centers. The process of delivering cloud gaming includes processing the user input for the game engine then encoding this as video and streamed to the end user. Due to another added layer of complexity, other problems arise and the aim of this project is to tackle networking issues in the cloud to reduce the latency experienced by the user.
 \par
 The Software-Defined Networking paradigm allows the management of network technology without the need of touching individual switches. This project will discuss the effects of using SDN for cloud gaming in a distributed system.
