--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -73,3 +73,32 @@
   journal={URL: http://today. java. net/jag/Fallacies. html},
   year={1994}
 }
+
+@article{mell2011nist,
+  title={The NIST definition of cloud computing},
+  author={Mell, Peter and Grance, Tim},
+  year={2011},
+  publisher={Computer Security Division, Information Technology Laboratory, National Institute of Standards and Technology Gaithersburg}
+}
+
+@article{kirkpatrick2013software,
+  title={Software-defined networking},
+  author={Kirkpatrick, Keith},
+  journal={Communications of the ACM},
+  volume={56},
+  number={9},
+  pages={16--19},
+  year={2013},
+  publisher={ACM}
+}
+
+@article{kim2013improving,
+  title={Improving network management with software defined networking},
+  author={Kim, Hyojoon and Feamster, Nick},
+  journal={Communications Magazine, IEEE},
+  volume={51},
+  number={2},
+  pages={114--119},
+  year={2013},
+  publisher={IEEE}
+}
