Report: Cloud Gaming

--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -102,3 +102,27 @@
   year={2013},
   publisher={IEEE}
 }
+
+@misc{witcher,
+   title={{Witcher III} System Minimum and Recommended System Requirements and Upgrade Guide},
+   author={Piner, David},
+   year={2016},
+   note = {[Online]. [Accessed 15 April 2016]. Available from: http://www.tentonhammer.com/guides/witcher-iii-system-minimum-and-recommended-system-requirements-and-upgrade-guide}
+}
+
+@misc{goty2015,
+author = {{GameCentral for Metro.co.uk}},
+title = {The Witcher 3 wins Game of the Year at Golden Joysticks 2015},
+year = {2015},
+publisher={Metro},
+note = {[Online]. [Accessed 15 April 2016]. Available from: http://metro.co.uk/2015/10/30/the-witcher-3-wins-ultimate-game-of-the-year-at-golden-joysticks-2015-5471812/}
+}
+
+@inproceedings{choy2012brewing,
+  title={The brewing storm in cloud gaming: A measurement study on cloud to end-user latency},
+  author={Choy, Sharon and Wong, Bernard and Simon, Gwendal and Rosenberg, Catherine},
+  booktitle={Proceedings of the 11th annual workshop on network and systems support for games},
+  pages={2},
+  year={2012},
+  organization={IEEE Press}
+}
