Report: cloud gaming

--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -111,11 +111,11 @@
 }
 
 @misc{goty2015,
-author = {{GameCentral for Metro.co.uk}},
-title = {The Witcher 3 wins Game of the Year at Golden Joysticks 2015},
-year = {2015},
-publisher={Metro},
-note = {[Online]. [Accessed 15 April 2016]. Available from: http://metro.co.uk/2015/10/30/the-witcher-3-wins-ultimate-game-of-the-year-at-golden-joysticks-2015-5471812/}
+  author = {{GameCentral for Metro.co.uk}},
+  title = {The Witcher 3 wins Game of the Year at Golden Joysticks 2015},
+  year = {2015},
+  publisher={Metro},
+  note = {[Online]. [Accessed 15 April 2016]. Available from: http://metro.co.uk/2015/10/30/the-witcher-3-wins-ultimate-game-of-the-year-at-golden-joysticks-2015-5471812/}
 }
 
 @inproceedings{choy2012brewing,
@@ -125,4 +125,27 @@ note = {[Online]. [Accessed 15 April 2016]. Available from: http://metro.co.uk/2
   pages={2},
   year={2012},
   organization={IEEE Press}
+}
+
+@misc{rtsp,
+  author = {Schulzrinne, H and Rao, A and Lanphier, R},
+  title = {Real Time Streaming Protocol},
+  year = {1998},
+  note = {[Online]. [Accessed 20 April 2016]. Available from: https://www.ietf.org/rfc/rfc2326.txt}
+}
+
+@inproceedings{chen2011measuring,
+  title={Measuring the latency of cloud gaming systems},
+  author={Chen, Kuan-Ta and Chang, Yu-Chun and Tseng, Po-Han and Huang, Chun-Ying and Lei, Chin-Laung},
+  booktitle={Proceedings of the 19th ACM international conference on Multimedia},
+  pages={1269--1272},
+  year={2011},
+  organization={ACM}
+}
+
+@misc{displaylag,
+  author = {Soomoro, Adeel},
+  title = {What is Input Lag: The Breakdown},
+  year = {2013},
+  note = {Online]. [Accessed 21 April 2016]. Available from: http://www.displaylag.com/what-is-input-lag-the-breakdown/}
 }
