Report: cloud computing, created new chapters

--- a/Documentation/report/template/fyp.tex
+++ b/Documentation/report/template/fyp.tex
@@ -13,6 +13,10 @@
 %the chapters are in a directory called Chapters
 \include{./Chapters/chapter1}
 \include{./Chapters/chapter2}
+\include{./Chapters/chapter3}
+\include{./Chapters/chapter4}
+\include{./Chapters/chapter5}
+\include{./Chapters/chapter6}
 
 %Adds References to the table of content
 %all you bibtex enteries go in the file called refs.bib
