--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -147,5 +147,32 @@
   author = {Soomoro, Adeel},
   title = {What is Input Lag: The Breakdown},
   year = {2013},
-  note = {Online]. [Accessed 21 April 2016]. Available from: http://www.displaylag.com/what-is-input-lag-the-breakdown/}
+  note = {[Online]. [Accessed 21 April 2016]. Available from: http://www.displaylag.com/what-is-input-lag-the-breakdown/}
+}
+
+@inproceedings{jadeja2012cloud,
+  title={Cloud computing-concepts, architecture and challenges},
+  author={Jadeja, Yaju and Modi, Kavan},
+  booktitle={Computing, Electronics and Electrical Technologies (ICCEET), 2012 International Conference on},
+  pages={877--880},
+  year={2012},
+  organization={IEEE}
+}
+
+@misc{cloudservices,
+author = {Kumawat, Amit},
+title = {Cloud Service Models (IaaS, SaaS, PaaS) + How Microsoft Office 365, Azure Fit In},
+year = {2013},
+note = {[Online]. [Accessed on 22 April 2016]. Available from: http://www.cmswire.com/cms/information-management/cloud-service-models-iaas-saas-paas-how-microsoft-office-365-azure-fit-in-021672.php}
+}
+
+@article{grossman2009case,
+  title={The case for cloud computing},
+  author={Grossman, Robert L},
+  journal={IT professional},
+  volume={11},
+  number={2},
+  pages={23--27},
+  year={2009},
+  publisher={IEEE}
 }
