--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -176,3 +176,12 @@ note = {[Online]. [Accessed on 22 April 2016]. Available from: http://www.cmswir
   year={2009},
   publisher={IEEE}
 }
+
+@inproceedings{beigbeder2004effects,
+  title={The effects of loss and latency on user performance in unreal tournament 2003{\textregistered}},
+  author={Beigbeder, Tom and Coughlan, Rory and Lusher, Corey and Plunkett, John and Agu, Emmanuel and Claypool, Mark},
+  booktitle={Proceedings of 3rd ACM SIGCOMM workshop on Network and system support for games},
+  pages={144--151},
+  year={2004},
+  organization={ACM}
+}
