--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -77,6 +77,7 @@
 @article{mell2011nist,
   title={The NIST definition of cloud computing},
   author={Mell, Peter and Grance, Tim},
+  journal={NIST},
   year={2011},
   publisher={Computer Security Division, Information Technology Laboratory, National Institute of Standards and Technology Gaithersburg}
 }
@@ -184,4 +185,11 @@ note = {[Online]. [Accessed on 22 April 2016]. Available from: http://www.cmswir
   pages={144--151},
   year={2004},
   organization={ACM}
+}
+
+@book{prusinkiewicz2012algorithmic,
+  title={The algorithmic beauty of plants},
+  author={Prusinkiewicz, Przemyslaw and Lindenmayer, Aristid},
+  year={2012},
+  publisher={Springer Science \& Business Media}
 }
