--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -193,3 +193,18 @@ note = {[Online]. [Accessed on 22 April 2016]. Available from: http://www.cmswir
   year={2012},
   publisher={Springer Science \& Business Media}
 }
+
+@book{hawkins2001opengl,
+  title={OpenGL game programming},
+  author={Hawkins, Kevin and Astle, Dave},
+  year={2001},
+  publisher={Cengage Learning}
+}
+
+@misc{plantslecture,
+  author = {Carr, Hamish},
+  institution = {University of Leeds},
+  howpublished = {University Lecture},
+  year = {2015},
+  title = {15: Natural Phenomena: Terrain \& Plants}
+}
