Report: Added more diagrams. SDN Load Balancer design

--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -208,3 +208,37 @@ note = {[Online]. [Accessed on 22 April 2016]. Available from: http://www.cmswir
   year = {2015},
   title = {15: Natural Phenomena: Terrain \& Plants}
 }
+
+@book{wu2015cloud,
+  title={Cloud Data Centers and Cost Modeling: A Complete Guide To Planning, Designing and Building a Cloud Data Center},
+  author={Wu, C. and Buyya, R.},
+  isbn={9780128016886},
+  url={https://books.google.co.uk/books?id=BeycBAAAQBAJ},
+  year={2015},
+  publisher={Elsevier Science}
+}
+
+@article{al2008scalable,
+  title={A scalable, commodity data center network architecture},
+  author={Al-Fares, Mohammad and Loukissas, Alexander and Vahdat, Amin},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={38},
+  number={4},
+  pages={63--74},
+  year={2008},
+  publisher={ACM}
+}
+
+@misc{northbound,
+author = {SDxCentral},
+title = {What are SDN Northbound APIs?},
+year = {2015},
+note = {[Online]. [Accessed on 1 May 2016]. Available from: https://www.sdxcentral.com/resources/sdn/north-bound-interfaces-api/}
+}
+
+@misc{southbound,
+author = {SDxCentral},
+title = {What are SDN Southbound APIs? - Where they are used.},
+year = {2015},
+note = {[Online]. [Accessed on 1 May 2016]. Available from: https://www.sdxcentral.com/resources/sdn/southbound-interface-api/}
+}
