Added network diagrams for test cases

--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -242,3 +242,10 @@ title = {What are SDN Southbound APIs? - Where they are used.},
 year = {2015},
 note = {[Online]. [Accessed on 1 May 2016]. Available from: https://www.sdxcentral.com/resources/sdn/southbound-interface-api/}
 }
+
+@misc{nvidiasysreq,
+author = {nVidia},
+title = {What are the system requirements for GeForce Now? | SHIELD},
+year = {2016},
+note = {[Online]. [Accessed on 4 May 2016]. Available from: https://shield.nvidia.co.uk/support/geforce-now/system-requirements/1}
+}
