Made FPS counter toggleable. Report: Evaluation, Implementation: Game, Cloud, Mininet

--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -249,3 +249,52 @@ title = {What are the system requirements for GeForce Now? | SHIELD},
 year = {2016},
 note = {[Online]. [Accessed on 4 May 2016]. Available from: https://shield.nvidia.co.uk/support/geforce-now/system-requirements/1}
 }
+
+@misc{opengl,
+author = {OpenGL},
+title = {FAQ - OpenGL.org},
+year = {2014},
+note = {[Online]. [Accessed on 6 May 2016]. Available from: https://www.opengl.org/wiki/FAQ}
+}
+
+@misc{qt,
+author = {The Qt Company Ltd},
+title = {Qt OpenGL},
+year = {2016},
+note = {[Online]. [Accessed on 6 May 2016]. Available from: http://doc.qt.io/qt-5/qtopengl-index.html}
+}
+
+@misc{qoffscreen,
+author = {The Qt Company Ltd},
+title = {QOffscreenSurface Class | Qt GUI 5.6},
+year = {2016},
+note = {[Online]. [Accessed on 7 May 2016]. Available from: http://doc.qt.io/qt-5/qoffscreensurface.html}
+}
+
+@misc{qtffmpeg,
+author = {Roggen, Daniel},
+title = {QtFFmpegWrapper Repository},
+year = {2013},
+note = {[Online]. [Accessed on 7 May 2016]. Available from: https://code.google.com/archive/p/qtffmpegwrapper}
+}
+
+@misc{live555,
+author = {{Live Networks, Inc.}},
+title = {The LIVE555 Media Server},
+year = {2015},
+note = {[Online]. [Accessed on 7 May 2016]. Available from: http://www.live555.com/mediaServer/}
+}
+
+@misc{openvswitch,
+author = {SDxCentral},
+title = {What is Open vSwitch (OVS)? - Definition},
+year = {2015},
+note = {[Online]. [Accessed on 7 May 2016]. Available from: https://www.sdxcentral.com/resources/open-source/what-is-open-vswitch/}
+}
+
+@misc{avgbandwidth,
+author = {Jackson, Mark},
+title = {Ofcom 2016 Report - Average UK Home Broadband Speeds},
+year = {2016},
+note = {[Online]. [Accessed on 7 May 2016]. Available from: http://www.ispreview.co.uk/index.php/2016/03/ofcom-2016-report-average-uk-home-broadband-speeds-reach-28-9mbps.html}
+}
