--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -298,3 +298,40 @@ title = {Ofcom 2016 Report - Average UK Home Broadband Speeds},
 year = {2016},
 note = {[Online]. [Accessed on 7 May 2016]. Available from: http://www.ispreview.co.uk/index.php/2016/03/ofcom-2016-report-average-uk-home-broadband-speeds-reach-28-9mbps.html}
 }
+
+@misc{sdncontroller,
+author = {SDxCentral},
+title = {What are SDN Controllers?},
+year = {2015},
+note = {[Online]. [Accessed on 8 May 2016]. Available from: https://www.sdxcentral.com/resources/sdn/sdn-controllers/} 
+}
+
+@misc{dataplane,
+author = {Rouse, Margaret},
+title = {What is data plane (DP)?},
+year = {2013},
+note = {[Online]. [Accessed on 18 April 2016]. Available from: http://searchsdn.techtarget.com/definition/data-plane-DP}
+}
+
+@misc{controlplane,
+author = {Rouse, Margaret},
+title = {What is control plane (CP)?},
+year = {2013},
+note = {[Online]. [Accessed on 18 April 2016]. Available from: http://searchsdn.techtarget.com/definition/control-plane-CP}
+}
+
+@inproceedings{amiri2015sdn1,
+  title={An SDN Controller for Delay and Jitter Reduction in Cloud Gaming},
+  author={Amiri, Maryam and Al Osman, Hussein and Shirmohammadi, Shervin and Abdallah, Maha},
+  booktitle={Proceedings of the 23rd Annual ACM Conference on Multimedia Conference},
+  pages={1043--1046},
+  year={2015},
+  organization={ACM}
+}
+
+@article{amiri2015sdn2,
+  title={SDN-based Game-Aware Network Management for Cloud Gaming},
+  author={Amiri, Maryam and Al Osman, Hussein and Shirmohammadi, Shervin and Abdallah, Maha},
+  journal={Proc. ACM/IEEE Network and Systems Support for Games, Zagreb, Croatia},
+  year={2015}
+}
