--- a/Documentation/report/template/config.tex
+++ b/Documentation/report/template/config.tex
@@ -9,6 +9,7 @@
 \usepackage{graphicx}
 \usepackage{titlesec}
 \usepackage{mathtools}
+\usepackage{hyperref}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
