--- a/Documentation/report/template/refs.bib
+++ b/Documentation/report/template/refs.bib
@@ -335,3 +335,33 @@ note = {[Online]. [Accessed on 18 April 2016]. Available from: http://searchsdn.
   journal={Proc. ACM/IEEE Network and Systems Support for Games, Zagreb, Croatia},
   year={2015}
 }
+
+@misc{cloudarch,
+author = {{Gaming Anywhere}},
+title = {Cloud Gaming Architecture},
+year = {2014},
+note = {[Online]. [Accessed on 18 April 2016]. Available from: http://gaminganywhere.org/gaming\_anywhere.files/arch.png}
+}
+
+@misc{cloudlatency,
+author = {Kharatian, Adam},
+title = {E3 2012: Nvidia’s Grid changes the face of cloud gaming},
+year = {2012},
+note = {[Online]. [Accessed on 18 April 2016]. Available from: http://nerdreactor.com/wp-content/uploads/2012/06/gridlatency.jpg}
+}
+
+@misc{sdnarch,
+author = {{Open Networking Foundation}},
+title = {OpenFlow},
+year = {2016},
+note = {[Online]. [Accessed on 1 May 2016]. Available from: https://www.opennetworking.org/images/stories/sdn-resources/openflow/12-8-OpenFlow-Diagram.jpg}
+}
+
+@misc{wireshark,
+author = {Wireshark},
+title = {Wireshark FAQ},
+year = {2015},
+note = {[Online]. [Accessed on 5 May 2016]. Available from: https://www.wireshark.org/faq.html}
+}
+
+
