--- a/Documentation/report/template/acknowledge.tex
+++ b/Documentation/report/template/acknowledge.tex
@@ -1,4 +1,7 @@
-<The page should contain any acknowledgements to those who have assisted with your work. Where you have worked as part of a team, you should, where appropriate, reference to any contribution made by other to the project.>
-
-Note that it is not acceptable to solicit assistance on `proof reading' which is defined as the ``the systematic checking and identification of errors in spelling, punctuation, grammar and sentence construction, formatting and layout in the test'';\\ see http://www.leeds.ac.uk/gat/documents/policy/Proof-reading-policy.pdf.
-
+I would like to thank my supervisors Jie Xu and Peter Garraghan for all the guidance and advice they have given to me throughout the project. Weekly meetings were very helpful to keep my motivation going as well as a time to reflect on current progress on the project and to discuss challenges faced.
+\newline
+\par
+Another person I would like to thank is my assessor David Duke. The feedback given to me for the Planning and Scoping document and Progress Meeting was very helpful so I could narrow down my problem.
+\newline
+\par
+I would also like to thank the university IT support team especially John Hodrien for their help regarding the use of the university School of Computing cloud testbed. My personal tutor Karim Djemame was supportive as a meeting was held with the other members in the tutor group to contemplate on the successes and challenges of each others projects which was helpful to keep me motivated.
