--- a/Documentation/report/template/prelude.tex
+++ b/Documentation/report/template/prelude.tex
@@ -9,18 +9,18 @@
 \hline 
 Items & Format & Recipient(s) and Date \\ 
 \hline 
-Deliverable 1, 2, 3 & Report & SSO (DD/MM/YY) \\ 
+Final Report (2 copies) & Report & SSO (10/05/16) \\ 
 \hline 
-Participant consent forms & Signed forms in envelop & SSO (DD/MM/YY) \\ 
+Final Report (digital) & Report & VLE (10/05/16) \\ 
 \hline 
-Deliverable 4 & Software codes or URL & Supervisor, Assessor (DD/MM/YY) \\ 
+Project Code & GitHub Repository & Supervisors, Assessor (10/05/16) \\ 
 \hline 
-Deliverable 5 & User manuals & Client, Supervisor (DD/MM/YY) \\ 
+User Manual & Report Appendix & SSO (10/05/16) \\ 
 \hline 
 \end{tabular} 
 \end{table}
 
-\noindent Type of project: \rule{100mm}{1pt}
+\noindent Type of project: Exploratory Software
 \vspace{\fill}\\
 \noindent The candidate confirms that the work submitted is their own and the appropriate credit has been given where reference has been made to the work of others.
 \vspace{\fill}\\
